this is the draft I submitted

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/connections.bib
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/connections.bib
@@ -15,6 +15,7 @@
       primaryClass={math.DG}
 }
 
+
 @article{baez_huerta_higher_gauge,
    title={An invitation to higher gauge theory},
    volume={43},
@@ -94,6 +95,22 @@ url = {https://github.com/UniMath/agda-unimath/}
   organization = {YouTube},
   author = {Frederic P. Schuller and The WE-Heraeus International Winter School on Gravity and Light},
   url = {https://www.youtube.com/playlist?list=PLFeEvEPtX_0S6vxxiiNPrJbLu9aK1UVC_},
+}
+
+@misc{urs_atiyah,
+  author = {{nLab authors}},
+  title = {{{A}}tiyah {{L}}ie groupoid},
+  howpublished = {\url{https://ncatlab.org/nlab/show/Atiyah+Lie+groupoid}},
+  note = {\href{https://ncatlab.org/nlab/revision/Atiyah+Lie+groupoid/25}{Revision 25}},
+  month = oct,
+  year = 2024
+}
+
+@misc{urs_atiyah_blog,
+  author = {Urs Schreiber},
+  title = {n-Transport and Higher Schreier Theory},
+  url = {https://golem.ph.utexas.edu/category/2006/09/nconnections_and_higher_schrei.html},
+  year = 2006
 }
 
 @online{roe_surgery,
@@ -531,4 +548,20 @@ url = {{https://www.cs.cmu.edu/~kmcrane/Projects/DDG/}},
  publisher={Cambridge University Press (CUP)},
  author={Scoccola, Luis},
  year={2020},
- month=may, pages={511–544} }
+ month=may, pages={511–544}
+}
+
+@inproceedings{hopf,
+  title={Differential geometry in the large: Seminar lectures, New York University, 1946 and Stanford University, 1956},
+  author={Heinz Hopf},
+  year={1983},
+  url={https://api.semanticscholar.org/CorpusID:117042538}
+}
+
+@misc{christensen_univalence,
+  author={Dan Christensen},
+  title = {A characterization of univalent fibrations},
+  howpublished = {\url{https://jdc.math.uwo.ca/papers/univalence-ct2015.pdf}},
+  year = {2015},
+  note = {Accessed: {2024–11-01}}
+}
