--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -109,8 +109,11 @@
 \newcommand{\op}[1]{#1^{\mathsf{op}}}
 \newcommand{\pt}{\mathrm{pt}}
 \newcommand{\ev}{\mathrm{ev}}
-\newcommand{\Aut}{\mathrm{Aut}}
-\newcommand{\BAut}{\mathrm{BAut}}
+\DeclareMathOperator{\Aut}{Aut}
+\DeclareMathOperator{\BAut}{BAut}
+\DeclareMathOperator{\ad}{ad}
+\DeclareMathOperator{\Ad}{Ad}
+\newcommand{\apd}{\mathrm{apd}}
 \newcommand{\BAuto}[1]{\BAut_1(#1)}
 \newcommand{\so}{S^1}
 \newcommand{\BAutoso}{\BAuto{S^1}}
@@ -135,8 +138,6 @@
 \newcommand{\pinv}{p^{-1}}
 \newcommand{\aut}{\mathrm{Aut}}
 \newcommand{\diffeo}{\mathrm{Diffeo}}
-\newcommand{\ad}{\mathrm{ad}}
-\newcommand{\Ad}{\mathrm{Ad}}
 \newcommand{\uni}{\mathcal{U}}
 \newcommand{\K}{\mathrm{K}}
 \newcommand{\mysection}[1]{\section{\texorpdfstring{#1}{\detokenize{#1}}}}
@@ -182,7 +183,6 @@
 \newcommand{\dottol}[1]{\stackrel{#1}{\dotto}}
 \newcommand{\icol}[2]{{{#1} \choose {#2}}}
 \newcommand{\twist}[2]{{#1}^{\circlearrowleft {#2}}}
-\newcommand{\apd}{\mathrm{apd}}
 \newcommand{\tr}{\mathrm{tr}}
 \newcommand{\Inn}{\mathrm{Inn}}
 \newcommand{\shapez}{\shape{}_{0}}
@@ -222,3 +222,4 @@
 \newtheorem{mycor}{Corollary}
 \newtheorem{myprop}{Proposition}
 \newtheorem{myclaim}{Claim}
+\newtheorem{mynote}{Note}
