added refs to DDG

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_intro.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_intro.tex
@@ -42,4 +42,4 @@ We will investigate that the data in dimensions 1 and 2 of \( T \) can be though
 Taking the dimension 1 part of a function can be thought of as its derivative (``\( \ap \) is \( d \)''). If the codomain has an H-space structure then we can ask about how the action on paths interacts with pointwise multiplication. This will lead us to the Leibniz formula in this context, which emerges simply from horizontal composition in the codomain. This also implies that we can view a connection as the derivative of a bundle classifying map.
 
 \subsection{Future work}
-The results of this note can be extended in many directions. There are higher-dimensional generalizations of Gauss-Bonnet, including the theory of characteristic classes and Chern-Weil theory (which links characteristic classes to connections and curvature). Results from gauge theory could be imported into HoTT, as well as results from surgery theory and other topological constructions that may be especially amenable to this discrete setting. Finally, a theory that reintroduces smoothness could allow more formal versions of the analogies explored here. 
+The results of this note can be extended in many directions. There are higher-dimensional generalizations of Gauss-Bonnet, including the theory of characteristic classes and Chern-Weil theory (which links characteristic classes to connections and curvature). These would involve working with nonabelian groups like \( SO(n) \) and sphere bundles. Results from gauge theory could be imported into HoTT, as well as results from surgery theory and other topological constructions that may be especially amenable to this discrete setting. Relationships with computer graphics and discrete differential geometry\cite{crane_ddg}\cite{crane_connections} could be explored. Finally, a theory that reintroduces smoothness could allow more formal versions of the analogies explored here. 
