--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_torsors.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_torsors.tex
@@ -32,7 +32,7 @@ The homotopy type theory of cohomology and bundles tells us that the type of pri
 We'll resolve this problem with the following discussion, following Scoccola\cite{sco}. We will state the definitions and theorems for a general \( \K(G,n) \) but we will be focusing on \( n=1 \) in this note.
 
 \begin{mydef}
-Let \( \EM(G,n)\defeq \BAut(\K(G,n))\defeq \sit{Y:\uni}||Y\simeq \K(G,n)||_{-1}\). A \( \K(G,n)-bundle \) on a type \( M \) is the fiber of a map \( M\to\EM(G,n) \).
+Let \( \EM(G,n)\defeq \BAut(\K(G,n))\defeq \sit{Y:\uni}||Y\simeq \K(G,n)||_{-1}\). A \defemph{\( \K(G,n) \)-bundle} on a type \( M \) is the fiber of a map \( M\to\EM(G,n) \).
 \end{mydef}
 
 Scoccola uses two self-maps on the universe: suspension \( \Sigma \) and forgetting a point \( F_\bullet \) to form the composition 
