fix misplaced curly brace; update date

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_combman.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_combman.tex
@@ -46,7 +46,7 @@ The link is all the neighboring vertices of \( v \) and the codimension 1 faces 
     }
   ;
 \end{tikzpicture}
-\caption{The link of \( v \) in this complex consists of the vertices \( \{a,b,c,d,e,f\} \) and the edges \( \{ab,bc,cd,de,ef,fa\} \)}, forming a hexagon.
+\caption{The link of \( v \) in this complex consists of the vertices \( \{a,b,c,d,e,f\} \) and the edges \( \{ab,bc,cd,de,ef,fa\} \), forming a hexagon.}
 \label{fig:link}
 \end{figure}
 
