reference the names Euler class and Chern class, and refer to the splitting principle as the roadmap for higher dimensional groups

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_torsors.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_torsors.tex
@@ -51,9 +51,13 @@ Given \( f:M\to\EM(G,n) \), the \defemph{associated action of \( M \) on \( G \)
 
 Let's relate this to \emph{orientation}. Note that the obstruction in the theorem is about a map into \( \EMp(G,n+1) \) and further note that \( \EMp(G,n)\simeq \K(\Aut G,1) \) (independent of \( n \)). The theorem says that the data of a map into \( \EM(G,n) \) factors into data about a map into \( \K(G,n+1) \) and one into \( \K(\Aut G,1) \). Informally, \( \EM(G,n) \) is a little too large to be a \( K(G,n+1) \), as it includes data about automorphisms of \( G \).
 
-In the special case of \( \EMzo \) the conditions of the theorem are met when \( f_\bullet:M\to\K(\Aut \zz, 1) \) is contractible. \( \Aut\zz \) consists of the \( \zz/2\zz \) worth of outer automorphisms given by multiplication by \( \pm 1 \). Symmetries of the circle are our discrete stand-in for the matrix group \( O(2) \), which contains both rotations and (orientation-reversing) reflections of the plane. Requiring a contractible induced map to \( \pm 1 \) amounts to a choice of direction for all the circles, and so deserves the name ``\( f \) is \emph{orientable}.'' In addition \( f_\bullet \) deserves to be called the first Stiefel-Whitney class of \( f \), and the requirement here is that it vanishes. Reinterpreting more of the theory of characteristic classes would be an enlightening future project.
+In the special case of \( \EMzo \) the conditions of the theorem are met when \( f_\bullet:M\to\K(\Aut \zz, 1) \) is contractible. \( \Aut\zz \) consists of the \( \zz/2\zz \) worth of outer automorphisms given by multiplication by \( \pm 1 \). Symmetries of the circle are our discrete stand-in for the matrix group \( O(2) \), which contains both rotations and (orientation-reversing) reflections of the plane. Requiring a contractible induced map to \( \pm 1 \) amounts to a choice of direction for all the circles, and so deserves the name ``\( f \) is \emph{orientable}.'' In addition \( f_\bullet \) deserves to be called the first Stiefel-Whitney class of \( f \), and the requirement here is that it vanishes. 
 
-And so we can continue to work with the univalent fibration \( \EM(G,1) \) and still know that we are also studying principal \( \K(G,1) \)-fibrations, if the bundle is orientable.
+\begin{mynote}
+Reinterpreting more of the theory of characteristic classes would be an enlightening future project. Defining a Chern class and Euler class in 2 dimensions is a goal of this note, but we will not prove all the various laws these classes satisfy (the Whitney sum formula and so on). Nonabelian matrix Lie groups such as \( SO(n) \) and \( SU(n) \) are not fully imported into homotopy type theory, but recall that some classical results from the theory of characteristic classes are obtained by replacing the group with a maximal torus, which should be a smaller leap from what is presented here\cite{splitting_principle}.
+\end{mynote}
+
+In summary, we can continue to work with the univalent fibration \( \EM(G,1) \) and still know that we are also studying principal \( \K(G,1) \)-fibrations, if the bundle is orientable.
 
 \subsection{Pathovers in principal bundles}
 Suppose we have \( T:M\to\EMzo \). We adopt a convention of naming objects in \( M \) with Latin letters, and the corresponding structures in \( P \) with Greek letters. Paths in a sigma type \( \sit{x:M}T(x) \) are given by pairs of paths: a path \( p:a=_M b \) in the base, and a pathover \( \pi:\tr_p(\alpha)=_{T(b)}\beta \) between \( \alpha:T(a) \) and \( \beta:T(b) \) in the fibers. We can't directly compare \( \alpha \) and \( \beta \) since they are of different types, so we apply transport to one of them (which is asymmetrical, but equivalent to the alternatives). We say \( \pi \) lies over \( p \). 
