--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/connections.bib
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/connections.bib
@@ -97,12 +97,22 @@ url = {https://github.com/UniMath/agda-unimath/}
   url = {https://www.youtube.com/playlist?list=PLFeEvEPtX_0S6vxxiiNPrJbLu9aK1UVC_},
 }
 
+
 @misc{urs_atiyah,
   author = {{nLab authors}},
   title = {{{A}}tiyah {{L}}ie groupoid},
   howpublished = {\url{https://ncatlab.org/nlab/show/Atiyah+Lie+groupoid}},
   note = {\href{https://ncatlab.org/nlab/revision/Atiyah+Lie+groupoid/25}{Revision 25}},
   month = oct,
+  year = 2024
+}
+
+@misc{splitting_principle,
+  author = {{nLab authors}},
+  title = {splitting principle},
+  howpublished = {\url{https://ncatlab.org/nlab/show/splitting+principle}},
+  note = {\href{https://ncatlab.org/nlab/revision/splitting+principle/24}{Revision 24}},
+  month = nov,
   year = 2024
 }
 
